kubernetes/components/tailscale-new/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${APP}-tailscale
  annotations:
    reloader.stakater.com/auto: "true"
    tailscale.com/proxy-group: ingress
    tailscale.com/tags: "tag:apps"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: ${APP}
      port:
        name: "${TAILSCALE_PORT:=http}"
  tls:
    - hosts:
        - ${TAILSCALE_HOST:=${APP}}
